crates/plotnik-lib/tests/02-parser/recovery_incomplete/enum_branch_missing_expression.txt
Q = [Label:]
------------------ DIAGNOSTICS -------------------
error: expected an expression
 --> query.ptk:1:12
  |
1 | Q = [Label:]
  |            ^
  |
help: an expression is a node `(kind)`, anonymous node `"text"`, sequence `{...}`, or alternation `[...]`
